(fix) Fixed Newsweek icon on mobile version and my turn section column fixed for mobile version

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -16,7 +16,7 @@
 .logo-img-nav{
   fill: white;
   height: 35px;
-  width: 160px;
+  width: 130px;
 }
 
 .subscribe-btn {
